@@ -1,3 +1,8 @@
+2014-06-05 Riccardo Mottola <rm@gnu.org>
+
+	* DBCSVWriter.m
+	Primitive NSCalendarDate object handling (only description for now)
+
 2014-06-03 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.m
